--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ expandvars = "^0.6.5"
 numpy = "1.24"
 python = ">=3.8,<3.13"
 python-dateutil = "^2.8.1"
+psycopg2-binary = "^2.9.3"
 signal-processing-algorithms = "^1.3.2"
 "ruamel.yaml" = "=0.17.21"
 requests = "^2.25.1"
@@ -17,6 +18,7 @@ pystache = "^0.6.0"
 tabulate = "^0.8.7"
 validators = "^0.18.2"
 slack-sdk = "^3.4.2"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
