--- a/examples/psql/hunter.yaml
+++ b/examples/psql/hunter.yaml
@@ -11,7 +11,7 @@ templates:
   common:
     type: postgres
     time_column: commit_ts
-    attributes: [experiment_id, config_id, commit, samples]
+    attributes: [experiment_id, config_id, commit]
     # required for --update-postgres to work
     update_statement: |
       UPDATE results 
@@ -40,7 +40,6 @@ tests:
              r.process_cumulative_rate_mean, 
              r.process_cumulative_rate_stderr, 
              r.process_cumulative_rate_diff, 
-             r.samples, 
              r.experiment_id, 
              r.config_id
       FROM results r
